Bug 474596 - Krusader always crashes after drag-n-drop several files on info bar
Summary: Krusader always crashes after drag-n-drop several files on info bar
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords: drkonqi
: 490603 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-09-16 16:05 UTC by Andrew
Modified: 2024-11-04 10:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew 2023-09-16 16:05:53 UTC
Application: krusader (2.8.0 "A New Day")

Qt Version: 5.15.10
Frameworks Version: 5.109.0
Operating System: Linux 6.4.15-200.fc38.x86_64 x86_64
Windowing System: X11
Distribution: "Fedora release 38 (Thirty Eight)"
DrKonqi: 5.27.7 [KCrashBackend]

-- Information about the crash:
Testcase:
- Open different folders in left and right pane
- Select several files at one pane, drag them to another and drop on info bar (that one below the filelist with text like "0 out of 10, 0 B out of 5.9 MiB")
- Krusader crashes immediately after dropping the files on the bar.

Fedora 38 x86-64
krusader-2.8.0-4.fc38.x86_64
KDE Frameworks 5.109.0
Qt 5.15.10 (built against 5.15.10)

The crash can be reproduced every time.

-- Backtrace:
Application: Krusader (krusader), signal: Segmentation fault

[KCrash Handler]
#4  0x00007fb554cbd06c in QMetaObject::cast(QObject const*) const () from /lib64/libQt5Core.so.5
#5  0x00005564dd8bc753 in QtPrivate::QFunctorSlotObject<KrLayoutFactory::createFrame(QDomElement const&, QWidget*)::{lambda(QDropEvent*)#1}, 1, QtPrivate::List<QDropEvent*>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) ()
#6  0x00007fb554ce8481 in void doActivate<false>(QObject*, int, void**) () from /lib64/libQt5Core.so.5
#7  0x00005564dd8845a7 in ListPanelFrame::dropEvent(QDropEvent*) ()
#8  0x00007fb5559f3688 in QWidget::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#9  0x00007fb555aa4bc7 in QFrame::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#10 0x00007fb5559aeb75 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#11 0x00007fb5559b6e50 in QApplication::notify(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#12 0x00007fb554cb41a8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#13 0x00007fb555a0fb6a in QWidgetWindow::handleDropEvent(QDropEvent*) () from /lib64/libQt5Widgets.so.5
#14 0x00007fb555a108b5 in QWidgetWindow::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#15 0x00007fb5559aeb75 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#16 0x00007fb554cb41a8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#17 0x00007fb55516eb8e in QGuiApplicationPrivate::processDrop(QWindow*, QMimeData const*, QPoint const&, QFlags<Qt::DropAction>, QFlags<Qt::MouseButton>, QFlags<Qt::KeyboardModifier>) () from /lib64/libQt5Gui.so.5
#18 0x00007fb55514ae6a in QWindowSystemInterface::handleDrop(QWindow*, QMimeData const*, QPoint const&, QFlags<Qt::DropAction>, QFlags<Qt::MouseButton>, QFlags<Qt::KeyboardModifier>) () from /lib64/libQt5Gui.so.5
#19 0x00007fb55072d612 in QXcbDrag::handleDrop(QPlatformWindow*, xcb_client_message_event_t const*, QFlags<Qt::MouseButton>, QFlags<Qt::KeyboardModifier>) () from /lib64/libQt5XcbQpa.so.5
#20 0x00007fb55073139e in QXcbDrag::drop(QPoint const&, QFlags<Qt::MouseButton>, QFlags<Qt::KeyboardModifier>) () from /lib64/libQt5XcbQpa.so.5
#21 0x00007fb5551ad28a in QBasicDrag::eventFilter(QObject*, QEvent*) () from /lib64/libQt5Gui.so.5
#22 0x00007fb554cb3e75 in QCoreApplicationPrivate::sendThroughApplicationEventFilters(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#23 0x00007fb5559aebb0 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#24 0x00007fb554cb41a8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#25 0x00007fb55516cc2b in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /lib64/libQt5Gui.so.5
#26 0x00007fb55514acbc in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Gui.so.5
#27 0x00007fb55071b4d6 in xcbSourceDispatch(_GSource*, int (*)(void*), void*) () from /lib64/libQt5XcbQpa.so.5
#28 0x00007fb5535134fc in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#29 0x00007fb5535716b8 in g_main_context_iterate.isra () from /lib64/libglib-2.0.so.0
#30 0x00007fb553510b83 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#31 0x00007fb554d06749 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#32 0x00007fb554cb2b6b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#33 0x00007fb5551ac958 in QBasicDrag::drag(QDrag*) () from /lib64/libQt5Gui.so.5
#34 0x00007fb5551aaa4d in QDragManager::drag(QDrag*) () from /lib64/libQt5Gui.so.5
#35 0x00007fb5551aafb3 in QDrag::exec(QFlags<Qt::DropAction>, Qt::DropAction) () from /lib64/libQt5Gui.so.5
#36 0x00005564dd8ac43e in ListPanel::startDragging(QStringList const&, QPixmap const&) ()
#37 0x00007fb554ce8481 in void doActivate<false>(QObject*, int, void**) () from /lib64/libQt5Core.so.5
#38 0x00005564dd8cd9b9 in KrMouseHandler::mouseMoveEvent(QMouseEvent*) ()
#39 0x00005564dd8cdc4d in KrInterDetailedView::mouseMoveEvent(QMouseEvent*) ()
#40 0x00007fb5559f3688 in QWidget::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#41 0x00007fb555aa4bc7 in QFrame::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#42 0x00007fb554cb3f56 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#43 0x00007fb5559aeb65 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#44 0x00007fb5559b7456 in QApplication::notify(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#45 0x00007fb554cb41a8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#46 0x00007fb5559b56a4 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /lib64/libQt5Widgets.so.5
#47 0x00007fb555a0d1a9 in QWidgetWindow::handleMouseEvent(QMouseEvent*) () from /lib64/libQt5Widgets.so.5
#48 0x00007fb555a1072f in QWidgetWindow::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#49 0x00007fb5559aeb75 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#50 0x00007fb554cb41a8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#51 0x00007fb55516cc2b in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /lib64/libQt5Gui.so.5
#52 0x00007fb55514acbc in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Gui.so.5
#53 0x00007fb55071b4d6 in xcbSourceDispatch(_GSource*, int (*)(void*), void*) () from /lib64/libQt5XcbQpa.so.5
#54 0x00007fb5535134fc in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#55 0x00007fb5535716b8 in g_main_context_iterate.isra () from /lib64/libglib-2.0.so.0
#56 0x00007fb553510b83 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#57 0x00007fb554d06749 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#58 0x00007fb554cb2b6b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#59 0x00007fb554cbadfb in QCoreApplication::exec() () from /lib64/libQt5Core.so.5
#60 0x00005564dd86a3a3 in main ()
[Inferior 1 (process 3415) detached]

The reporter indicates this bug may be a duplicate of or related to bug 448647, bug 457286, bug 471596.

Reported using DrKonqi
Comment 1 Alex Bikadorov 2024-08-01 12:33:41 UTC
*** Bug 490603 has been marked as a duplicate of this bug. ***
Comment 2 Alex Bikadorov 2024-08-01 12:34:25 UTC
Yes, it crashes :(
Comment 3 Bug Janitor Service 2024-08-05 12:46:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/krusader/-/merge_requests/139
Comment 4 Bug Janitor Service 2024-09-25 16:38:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/krusader/-/merge_requests/144
Comment 5 Alex Bikadorov 2024-11-04 10:19:14 UTC
Git commit 503d41eae91cf51ba9e2df7f2bb6b9ad75a52bdc by Alexander Bikadorov.
Committed on 04/11/2024 at 10:15.
Pushed by abikadorov into branch 'master'.

Panel: Fix crash when dropping on status bar

Bug exists since 2df3af6c3d7f61.

FIXED: [ 474596 ] Krusader always crashes after drag-n-drop several files on info bar

M  +3    -1    app/Panel/krlayoutfactory.cpp
M  +1    -1    app/Panel/krlayoutfactory.h
M  +3    -3    app/Panel/listpanelframe.h

https://invent.kde.org/utilities/krusader/-/commit/503d41eae91cf51ba9e2df7f2bb6b9ad75a52bdc