Panel: Fix crash when dropping on status bar

Bug exists since 2df3af6c3d7f61.

FIXED: [ 474596 ] Krusader always crashes after drag-n-drop several files on info bar
BUG: 474596